--- a/FLX_homework_5/homework/src/styles.css
+++ b/FLX_homework_5/homework/src/styles.css
@@ -1,3 +1,4 @@
+
 * {
   margin: 0;
   padding: 0;
@@ -53,12 +54,12 @@ ul li:hover {
   color: #fff;
   text-decoration: none;
   align-self: center;
-  font-size: 35px;
+  font-size: 2.5em;
   font-weight: 100;
   padding-left: 20px;
 }
 .logo span {
-  color: pink;
+  color: #9b1350;
 }
 main {
   display: flex;
@@ -185,7 +186,10 @@ footer {
 /* Medium screens */
 @media only screen and (max-width: 768px) {
   h2 {
-    font-size: 2em;
+    font-size: 1em;
+  }
+  h3 {
+    font-size: 1em;
   }
   header, main, footer {
     width: 94%;
@@ -193,8 +197,7 @@ footer {
   header {
     flex-direction: column-reverse;
     text-align: center;
-    padding: 2vw;
-    font-size: 3vw;
+    padding: 15px;
   }
   .toggle {
     display: block;
@@ -224,6 +227,11 @@ footer {
     justify-content: center;
     text-align: initial;
   }
+  .post-text p,
+  .no-image-post p,
+  footer span {
+    font-size: 0.8em;
+  }
   .post .post-pic, 
   .post .post-text,
   .post .post-date {
@@ -234,7 +242,7 @@ footer {
   }
   aside {
     width: 38%;
-    font-size: 2vw;
+    font-size: 0.8em;
   }
   footer {
     flex-direction: column;
